[package]
name = "todos"
version = "0.1.0"
authors = ["lucperkins <lucperkins@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-cors = "0.6.2"
actix-web = "4"
actix-web-lab = "0.18.5"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
juniper = "0.15.1"
